--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
     <br>
     <img src="mk.jpg" alt="modric" usemap="#bestplayer"  id="image" class="image">
     <map name="bestplayer"> 
-     <area shape="poly" coords="526,348,506,179,430,147,430,53,346,56,350,160,318,180,325,346" title="Click to Go Modrić Page" href="https://www.facebook.com/ModricLuka10" alt="modric">
-     <area shape="poly" coords="142,348,131,136,197,94,198,12,235,1,266,21,273,126,309,152,287,349" title="Click to Go Toni kroos Page" href="https://www.facebook.com/tonikroos" alt="toni kroos" >    
+     <area shape="poly" coords="526,348,506,179,430,147,430,53,346,56,350,160,318,180,325,346" title="Click to Go Modrić Page" href="https://www.facebook.com/ModricLuka10" target="_blank" alt="modric">
+     <area shape="poly" coords="142,348,131,136,197,94,198,12,235,1,266,21,273,126,309,152,287,349" title="Click to Go Toni kroos Page" href="https://www.facebook.com/tonikroos" target="_blank" alt="toni kroos" >    
     </map>
     <br>
     <br>
